--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,6 @@
 @import "normalize.css";
 @import "fonts.css";
 @import "default.css";
+@import "header.css";
+@import "navigation.css";
+@import "country.css";
